--- a/styles/style_index.scss
+++ b/styles/style_index.scss
@@ -1,14 +1,17 @@
-$primary-color: #290044;
-$secondary-color: #000000;
+// $primary-color: #290044;
+$primary-color: #ffffff;
+$secondary-color: #c70000;
 
 html {
-  background: linear-gradient(to bottom, $primary-color, $secondary-color);
-  color: white;
+  // background: linear-gradient(to bottom, $primary-color, $secondary-color);
+  background-color: $primary-color;
+  color: black;
 }
 
 .header_title {
   text-align: left;
-  margin-right: 59%;
+  margin-right: 58%;
+  margin-left: 1%;
 }
 
 .nav {
@@ -16,7 +19,11 @@ html {
   position: sticky;
   top: 0%;
   overflow: hidden;
-  background: $primary-color;
+  background: $secondary-color;
+  color: white;
+  margin-top: -5%;
+  margin-left: -9px;
+  margin-right: -9px;
 }
 
 .btn_about,
@@ -39,6 +46,7 @@ html {
 
 .cv {
 text-align: center;
+margin-top: 5%;
 }
 
 ul {
