--- a/styles/style_projects.scss
+++ b/styles/style_projects.scss
@@ -1,14 +1,17 @@
-$primary-color: #290044;
-$secondary-color: #000000;
+// $primary-color: #290044;
+$primary-color: #ffffff;
+$secondary-color: #c70000;
 
 html {
-  background: linear-gradient(to bottom, $primary-color, $secondary-color);
-  color: white;
+  // background: linear-gradient(to bottom, $primary-color, $secondary-color);
+  background-color: $primary-color;
+  color: black;
 }
 
 .header_title {
   text-align: left;
-  margin-right: 72%;
+  margin-right: 70%;
+  margin-left: 1%;
 }
 
 .nav {
@@ -16,7 +19,11 @@ html {
   position: sticky;
   top: 0%;
   overflow: hidden;
-  background: $primary-color;
+  background: $secondary-color;
+  color: white;
+  margin-top: -5%;
+  margin-left: -9px;
+  margin-right: -9px;
 }
 
 .btn_about,
@@ -37,23 +44,12 @@ html {
   padding-top: 5px;
 }
 
-.project_title {
-  display: flex;
-  margin-left: 45%;
+.cv {
+text-align: center;
 }
 
-p {
+ul {
   text-align: center;
-}
-
-.greenEarth_img {
-  display: flex;
-  height: 80%;
-  width: 80%;
-  margin-left: 10%;
-}
-
-.greenEarth_socials {
-  display: flex;
-  margin-left: 35%;
+  list-style-position: inside;
+  margin-right: 4%;
 }
