edited navbar color

--- a/styles/style_contactMe.css
+++ b/styles/style_contactMe.css
@@ -14,7 +14,7 @@ html {
   position: sticky;
   top: 0%;
   overflow: hidden;
-  background: #c70000;
+  background: #303030;
   color: white;
   margin-top: -5%;
   margin-left: -9px;
