--- a/styles/style_projects.scss
+++ b/styles/style_projects.scss
@@ -1,6 +1,6 @@
 // $primary-color: #290044;
 $primary-color: #ffffff;
-$secondary-color: #c70000;
+$secondary-color: #303030;
 
 html {
   // background: linear-gradient(to bottom, $primary-color, $secondary-color);
