--- a/styles/style_contactMe.css
+++ b/styles/style_contactMe.css
@@ -5,15 +5,17 @@ html {
 
 .header_title {
   text-align: left;
-  margin-right: 71%;
   margin-left: 1%;
+}
+
+.header_spacer {
+  width: 100%;
 }
 
 .nav {
   display: flex;
   position: sticky;
   top: 0%;
-  overflow: hidden;
   background: #303030;
   color: white;
   margin-top: -5%;
@@ -37,6 +39,7 @@ html {
   margin-bottom: 5%;
   padding-bottom: 5px;
   padding-top: 5px;
+  align-items: center;
 }
 
 form {
