--- a/styles/style_contactMe.css
+++ b/styles/style_contactMe.css
@@ -61,4 +61,10 @@ form {
   text-align: center;
   margin-top: 12%;
   margin-bottom: 10%;
+  margin-left: 35%;
+  margin-right: 35%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  border-radius: 20px;
+  background-color: rgb(168, 168, 168);
 }/*# sourceMappingURL=style_contactMe.css.map */
