--- a/styles/style_contactMe.scss
+++ b/styles/style_contactMe.scss
@@ -64,4 +64,10 @@ form {
   text-align: center;
   margin-top: 12%;
   margin-bottom: 10%;
+  margin-left: 35%;
+  margin-right: 35%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  border-radius: 20px;
+  background-color: rgb(168, 168, 168);
 }
