changed % to em in index scss

--- a/styles/style_index.scss
+++ b/styles/style_index.scss
@@ -8,7 +8,7 @@ html {
 
 .header_title {
   text-align: left;
-  margin-left: 1%;
+  margin-left: 1em;
 }
 
 .header_spacer {
@@ -36,8 +36,8 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 40px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -52,8 +52,8 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 33px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -61,11 +61,11 @@ html {
 
 .cv {
   text-align: center;
-  margin-top: 5%;
+  margin-top: 5em;
 }
 
 ul {
   text-align: center;
   list-style-position: inside;
-  margin-right: 4%;
+  margin-right: 4em;
 }
