--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -5,7 +5,7 @@ html {
 
 .header_title {
   text-align: left;
-  margin-left: 1%;
+  margin-left: 1em;
 }
 
 .header_spacer {
@@ -33,8 +33,8 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 40px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -49,8 +49,8 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 33px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -58,11 +58,11 @@ html {
 
 .cv {
   text-align: center;
-  margin-top: 5%;
+  margin-top: 5em;
 }
 
 ul {
   text-align: center;
   list-style-position: inside;
-  margin-right: 4%;
+  margin-right: 4em;
 }/*# sourceMappingURL=style_index.css.map */
