--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -18,7 +18,7 @@ html {
   top: 0%;
   background: #303030;
   color: white;
-  margin-top: -5%;
+  margin-top: -5em;
   margin-left: -9px;
   margin-right: -9px;
 }
