--- a/styles/style_index.scss
+++ b/styles/style_index.scss
@@ -21,7 +21,7 @@ html {
   top: 0%;
   background: $secondary-color;
   color: white;
-  margin-top: -5%;
+  margin-top: -5em;
   margin-left: -9px;
   margin-right: -9px;
 }
