--- a/styles/style_index.scss
+++ b/styles/style_index.scss
@@ -11,9 +11,9 @@ html {
   margin-left: 1em;
 }
 
-// .header_spacer {
-//   width: 100%;
-// }
+.header_spacer {
+  width: 100%;
+}
 
 .nav {
   display: flex;
