--- a/styles/style_contactMe.scss
+++ b/styles/style_contactMe.scss
@@ -8,7 +8,7 @@ html {
 
 .header_title {
   text-align: left;
-  margin-left: 1%;
+  margin-left: 1em;
 }
 
 .header_spacer {
@@ -21,7 +21,7 @@ html {
   top: 0%;
   background: $secondary-color;
   color: white;
-  margin-top: -5%;
+  margin-top: -5em;
   margin-left: -9px;
   margin-right: -9px;
 }
@@ -37,8 +37,8 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 40px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -53,8 +53,8 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 33px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -62,12 +62,12 @@ html {
 
 form {
   text-align: center;
-  margin-top: 12%;
-  margin-bottom: 10%;
-  margin-left: 35%;
-  margin-right: 35%;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  margin-top: 10em;
+  margin-bottom: 10em;
+  margin-left: 32em;
+  margin-right: 32em;
+  padding-top: 1em;
+  padding-bottom: 1em;
   border-radius: 20px;
   background-color: rgb(168, 168, 168);
 }
