--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -51,6 +51,7 @@ html {
   margin-top: 33px;
   margin-left: 1em;
   margin-bottom: 5em;
+  margin-right: 1em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
