--- a/styles/style_projects.css
+++ b/styles/style_projects.css
@@ -5,7 +5,7 @@ html {
 
 .header_title {
   text-align: left;
-  margin-left: 1%;
+  margin-left: 1em;
 }
 
 .header_spacer {
@@ -18,7 +18,7 @@ html {
   top: 0%;
   background: #303030;
   color: white;
-  margin-top: -5%;
+  margin-top: -5em;
   margin-left: -9px;
   margin-right: -9px;
 }
@@ -34,8 +34,8 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 40px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -50,8 +50,9 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 33px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
+  margin-right: 1em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -59,6 +60,6 @@ html {
 
 .project_title {
   display: flex;
-  margin-left: 45%;
-  margin-top: 5%;
+  margin-left: 18em;
+  margin-top: 3em;
 }/*# sourceMappingURL=style_projects.css.map */
