--- a/styles/style_projects.scss
+++ b/styles/style_projects.scss
@@ -8,7 +8,7 @@ html {
 
 .header_title {
 	text-align: left;
-	margin-left: 1%;
+	margin-left: 1em;
 }
 
 .header_spacer {
@@ -21,7 +21,7 @@ html {
   top: 0%;
   background: $secondary-color;
   color: white;
-  margin-top: -5%;
+  margin-top: -5em;
   margin-left: -9px;
   margin-right: -9px;
 }
@@ -37,8 +37,8 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 40px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -53,8 +53,9 @@ html {
   overflow: hidden;
   border-radius: 25px;
   margin-top: 33px;
-  margin-left: 1%;
-  margin-bottom: 5%;
+  margin-left: 1em;
+  margin-bottom: 5em;
+  margin-right: 1em;
   padding-bottom: 5px;
   padding-top: 5px;
   align-items: center;
@@ -62,6 +63,6 @@ html {
 
 .project_title {
   display: flex;
-  margin-left: 45%;
-  margin-top: 5%;
+  margin-left: 18em;
+  margin-top: 3em;
 }
