--- a/styles/style_projects.css
+++ b/styles/style_projects.css
@@ -62,4 +62,21 @@ html {
   display: flex;
   margin-left: 18em;
   margin-top: 3em;
+}
+
+.container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=style_projects.css.map */
