--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -1,11 +1,22 @@
-html {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
   background-color: #ffffff;
   color: black;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 .header_title {
   text-align: left;
   margin-left: 1em;
+  white-space: nowrap;
 }
 
 .header_spacer {
@@ -16,49 +27,44 @@ html {
   display: flex;
   position: sticky;
   top: 0%;
+  width: 100vw;
   background: #303030;
   color: white;
-  margin-top: -5em;
-  margin-left: -8px;
-  margin-right: -8px;
+  margin: 0;
+  padding-top: 3em;
+  padding-bottom: 2em;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+
+.nav a {
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .btn_about,
-.btn_projects {
-  background-color: lavender;
-  background-repeat: no-repeat;
-  border: grey, 5px, 5px, 5px, 5px;
-  color: black;
-  cursor: pointer;
-  overflow: hidden;
-  border-radius: 25px;
-  margin-top: 40px;
-  margin-left: 1em;
-  margin-bottom: 5em;
-  padding-bottom: 5px;
-  padding-top: 5px;
-  align-items: center;
-}
-
+.btn_projects,
 .btn_contactMe {
   background-color: lavender;
-  background-repeat: no-repeat;
-  border: grey, 5px, 5px, 5px, 5px;
+  border: 1px solid grey;
   color: black;
   cursor: pointer;
   overflow: hidden;
   border-radius: 25px;
-  margin-top: 33px;
-  margin-left: 1em;
-  margin-bottom: 5em;
-  margin-right: 1em;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  margin: 0 1em;
+  padding: 0.5em 1em;
+  height: auto;
+  display: inline-flex;
   align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 h1 {
   text-align: center;
+  margin-top: -1em;
 }
 
 p {
@@ -66,8 +72,7 @@ p {
 }
 
 .index-page {
-  margin-left: -60px;
-  margin-right: -60px;
+  margin: 0 1em;
 }
 
 .cv {
@@ -109,16 +114,38 @@ ul {
 
 .education {
   text-align: left;
-  margin-left: 5em;
+  margin-left: 2em;
   margin-top: 5em;
 }
 
 .skills {
   text-align: right;
-  margin-right: 5em;
+  margin-right: 2em;
 }
 
 .work_experience {
   text-align: left;
-  margin-left: 5em;
+  margin-left: 2em;
+  margin-top: 7em;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .btn_about,
+  .btn_projects,
+  .btn_contactMe {
+    width: 100%;
+    text-align: center;
+  }
+  .index-page {
+    margin: 0 0.5em;
+  }
+  .education,
+  .skills,
+  .work_experience {
+    margin: 1em 0;
+  }
 }/*# sourceMappingURL=style_index.css.map */
