--- a/styles/style_projects.css
+++ b/styles/style_projects.css
@@ -16,46 +16,44 @@ html {
   display: flex;
   position: sticky;
   top: 0%;
+  width: 100vw;
   background: #303030;
   color: white;
-  margin-top: -5em;
-  margin-left: -9px;
-  margin-right: -9px;
+  margin: 0;
+  margin-top: -2em;
+  margin-left: -1em;
+  padding: 1em 0;
+  padding-right: 1em;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  z-index: 1000;
+}
+
+.nav .nav-buttons {
+  margin-left: auto;
+  display: flex;
+  gap: 0.5em;
 }
 
 .btn_about,
-.btn_projects {
-  background-color: lavender;
-  background-repeat: no-repeat;
-  float: right;
-  border: grey, 5px, 5px, 5px, 5px;
-  color: black;
-  cursor: pointer;
-  overflow: hidden;
-  border-radius: 25px;
-  margin-top: 40px;
-  margin-left: 1em;
-  margin-bottom: 5em;
-  padding-bottom: 5px;
-  padding-top: 5px;
-  align-items: center;
-}
-
+.btn_projects,
 .btn_contactMe {
   background-color: lavender;
-  background-repeat: no-repeat;
-  border: grey, 5px, 5px, 5px, 5px;
+  border: 1px solid grey;
   color: black;
   cursor: pointer;
   overflow: hidden;
   border-radius: 25px;
-  margin-top: 33px;
-  margin-left: 1em;
-  margin-bottom: 5em;
-  margin-right: 1em;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  margin: 0 0.5em;
+  margin-top: 2em;
+  padding: 0.5em 1em;
+  height: auto;
+  display: inline-flex;
   align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
 .project_title {
@@ -79,4 +77,21 @@ html {
   right: 0;
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .btn_about,
+  .btn_projects,
+  .btn_contactMe {
+    width: 100%;
+    text-align: center;
+  }
+  form {
+    margin: 2em auto;
+    width: 90%;
+  }
 }/*# sourceMappingURL=style_projects.css.map */
