--- a/styles/style_index.scss
+++ b/styles/style_index.scss
@@ -101,7 +101,6 @@ ul {
   width: 200px;
   height: 150px;
   float: right;
-  margin-left: 20px;
 }
 
 .work_experience_img {
@@ -123,8 +122,9 @@ ul {
 
 .skills {
   text-align: right;
-  margin-right: 2em;
+  //margin-right: 2em;
   margin-top: 7em;
+  margin-left: 5em;
 }
 
 .work_experience {
