--- a/styles/style_projects.scss
+++ b/styles/style_projects.scss
@@ -30,13 +30,13 @@ html {
   align-items: center;
   justify-content: space-between;
   flex-wrap: nowrap;
-  z-index: 1000; // Ensure navbar is above other elements
+  z-index: 1000;
 }
 
 .nav .nav-buttons {
-  margin-left: auto; // Push buttons to the right
+  margin-left: auto;
   display: flex;
-  gap: 0.5em; // Add space between buttons
+  gap: 0.5em;
 }
 
 .btn_about,
@@ -61,8 +61,8 @@ html {
 
 .project_title {
   display: flex;
-  margin-left: 18em;
-  margin-top: 3em;
+  margin-left: 15em;
+  margin-top: 2em;
 }
 
 .container {
@@ -95,8 +95,7 @@ html {
     text-align: center;
   }
 
-  form {
-    margin: 2em auto; // Adjust margin for smaller screens
-    width: 90%; // Ensure the form is responsive
+  .container {
+    padding-top: 75%;
   }
 }
