--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -147,5 +147,16 @@ ul {
   .skills,
   .work_experience {
     margin: 1em 0;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .skills_img {
+    float: none;
+    margin: 1em 0;
+    width: 100%;
+    height: auto;
+  }
+  .text-container {
+    margin-left: 0;
   }
 }/*# sourceMappingURL=style_index.css.map */
