--- a/styles/style_index.scss
+++ b/styles/style_index.scss
@@ -154,5 +154,18 @@ ul {
   .skills,
   .work_experience {
     margin: 1em 0;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .skills_img {
+    float: none;
+    margin: 1em 0;
+    width: 100%;
+    height: auto;
+  }
+
+  .text-container {
+    margin-left: 0;
   }
 }
