--- a/styles/style_projects.css
+++ b/styles/style_projects.css
@@ -90,6 +90,10 @@ html {
     width: 100%;
     text-align: center;
   }
+  .project_title {
+    margin: 1em 0;
+    font-size: 1.5em;
+  }
   .container {
     padding-top: 75%;
   }
