--- a/styles/style_projects.scss
+++ b/styles/style_projects.scss
@@ -95,6 +95,11 @@ html {
     text-align: center;
   }
 
+  .project_title {
+    margin: 1em 0;
+    font-size: 1.5em;
+  }
+
   .container {
     padding-top: 75%;
   }
