--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -10,7 +10,6 @@ body {
   color: black;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
 }
 
 .header_title {
@@ -21,6 +20,7 @@ body {
 
 .header_spacer {
   width: 100%;
+  display: none;
 }
 
 .nav {
@@ -83,7 +83,6 @@ p {
 ul {
   text-align: right;
   list-style-position: inside;
-  margin-right: 4em;
 }
 
 .grad_cap {
@@ -153,7 +152,7 @@ ul {
   .skills_img {
     float: none;
     margin: 1em 0;
-    width: 100%;
+    width: 60%;
     height: auto;
   }
   .text-container {
