added calculator and counter project to projects page

--- a/styles/style_projects.scss
+++ b/styles/style_projects.scss
@@ -61,8 +61,10 @@ html {
 
 .project_title {
   display: flex;
-  margin-left: 15em;
+  align-items: center;
+  justify-content: center;
   margin-top: 2em;
+  margin-bottom: 1em;
 }
 
 .container {
