--- a/styles/style_projects.css
+++ b/styles/style_projects.css
@@ -58,8 +58,10 @@ html {
 
 .project_title {
   display: flex;
-  margin-left: 15em;
+  align-items: center;
+  justify-content: center;
   margin-top: 2em;
+  margin-bottom: 1em;
 }
 
 .container {
